// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox 1`] = `
<div
  className="form-group some class"
  data-api-field="cb"
>
  <div
    className="form-check form-check"
  >
    <input
      checked={true}
      className="form-check-input"
      disabled={false}
      id="cb"
      name="cb"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="form-check-label"
      htmlFor="cb"
      title=""
    >
      some label
    </label>
  </div>
</div>
`;

exports[`Checkbox complex 1`] = `
<div
  className="form-group some class error required"
  data-api-field="cb"
>
  <span
    className="tooltip-inline-block"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <small
      className="pre-text help-text form-text"
    >
      some advice
    </small>
    <small
      className="pre-text error-text form-text"
    >
      Oh no!
    </small>
    <div
      className="form-check form-check"
    >
      <input
        checked={true}
        className="form-check-input"
        disabled={false}
        id="cb"
        name="cb"
        onChange={[Function]}
        required={true}
        type="checkbox"
      />
      <label
        className="form-check-label"
        htmlFor="cb"
        title=""
      >
        some label
         
        <i
          className="bi bi-info-circle-fill size-1x tooltip-icon"
        />
      </label>
    </div>
  </span>
</div>
`;

exports[`Checkbox disabled 1`] = `
<div
  className="form-group some class required"
  data-api-field="cb"
>
  <div
    className="form-check form-check"
  >
    <input
      checked={true}
      className="form-check-input"
      disabled={false}
      id="cb"
      name="cb"
      onChange={[Function]}
      required={true}
      type="checkbox"
    />
    <label
      className="form-check-label"
      htmlFor="cb"
      title=""
    >
      some label
    </label>
  </div>
</div>
`;

exports[`Checkbox error 1`] = `
<div
  className="form-group some class error required"
  data-api-field="cb"
>
  <small
    className="pre-text error-text form-text"
  >
    Oh no!
  </small>
  <div
    className="form-check form-check"
  >
    <input
      checked={true}
      className="form-check-input"
      disabled={false}
      id="cb"
      name="cb"
      onChange={[Function]}
      required={true}
      type="checkbox"
    />
    <label
      className="form-check-label"
      htmlFor="cb"
      title=""
    >
      some label
    </label>
  </div>
</div>
`;

exports[`Checkbox readonly 1`] = `
<div
  className="form-group some class readonly"
  data-api-field="cb"
>
  <div
    className="form-check form-check"
  >
    <input
      checked={true}
      className="form-check-input"
      disabled={false}
      id="cb"
      name="cb"
      onChange={[Function]}
      readOnly={true}
      required={true}
      type="checkbox"
    />
    <label
      className="form-check-label"
      htmlFor="cb"
      title=""
    >
      some label
    </label>
  </div>
</div>
`;

exports[`Checkbox required 1`] = `
<div
  className="form-group some class required"
  data-api-field="cb"
>
  <div
    className="form-check form-check"
  >
    <input
      checked={true}
      className="form-check-input"
      disabled={false}
      id="cb"
      name="cb"
      onChange={[Function]}
      required={true}
      type="checkbox"
    />
    <label
      className="form-check-label"
      htmlFor="cb"
      title=""
    >
      some label
    </label>
  </div>
</div>
`;
